# BadTwitter

./: .gitmodules  BadTwitter.cpp  CMakeLists.txt  README.md
Files/: blacklist.txt  users.txt
junkFiles/: ReadTweets.cpp  ReadTweets.h
src/: Application.h  FileHandler.h  IteratorForTweets.h  Person.cpp  User.h
src/Interface/: LoginOptions.cpp  LoginOptions.h  ManagerOptions.cpp  ManagerOptions.h  UserOptions.h
src/graphics interface/: AppGUI.h
src/mainfiles/: FileHandler.cpp  FileHandler.h  Manager.cpp  Manager.h  Person.h  User.cpp
util/: LineCounter.h  MovingAverage.h  base.h  inputSanitise.cpp  inputSanitiser.h  vBlacklist.cpp  vFile.cpp
